--- a/app/templates/tab4.html
+++ b/app/templates/tab4.html
@@ -12,25 +12,27 @@
         <div class="col">
             <select class="form-control" id="categoryFilter">
                 <option value="">All Classes</option>
-                {% for category in categories %}
-                <option value="{{ category.name }}">{{ category.name }}</option>
+                {% for contract in contracts %}
+                {% for category in contract.categories %}
+                <option value="{{ category.category }}">{{ category.category }}</option>
+                {% endfor %}
                 {% endfor %}
             </select>
         </div>
         <div class="col">
             <select class="form-control" id="statusFilter">
                 <option value="">All Statuses</option>
-                {% for status in statuses %}
-                <option value="{{ status }}">{{ status }}</option>
-                {% endfor %}
+                <option value="On Rent">On Rent</option>
+                <option value="Delivered">Delivered</option>
             </select>
         </div>
         <div class="col">
             <select class="form-control" id="binFilter">
                 <option value="">All Bin Locations</option>
-                {% for bin in bin_locations %}
-                <option value="{{ bin }}">{{ bin }}</option>
-                {% endfor %}
+                <option value="resale">resale</option>
+                <option value="sold">sold</option>
+                <option value="pack">pack</option>
+                <option value="burst">burst</option>
             </select>
         </div>
         <div class="col">
@@ -43,29 +45,32 @@
             <tr id="category-table-header">
                 <th>Contract Number</th>
                 <th>Customer Name</th>
-                <th>Total Items on Contract</th>
+                <th>Categories</th>
                 <th>Last Scanned Date</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody id="category-rows">
-            {% for category in categories %}
-            {% set encoded_category = category.name | urlencode | replace("'", "\\'") | replace('"', '\\"') %}
-            <tr id="category-row-{{ category.cat_id }}">
-                <td>{{ category.name }}</td>
-                <td>{{ category.customer_name }}</td>
-                <td>{{ category.total_items }}</td>
-                <td>{{ category.last_scanned_date }}</td>
+            {% for contract in contracts %}
+            <tr id="category-row-{{ contract.contract_number }}">
+                <td>{{ contract.contract_number }}</td>
+                <td>{{ contract.client_name }}</td>
                 <td>
-                    <button class="btn btn-sm btn-secondary expand-btn" data-category="{{ encoded_category }}" data-target="common-{{ category.cat_id }}">Expand</button>
-                    <button class="btn btn-sm btn-secondary collapse-btn" style="display:none;" onclick="collapseSection('common-{{ category.cat_id }}')">Collapse</button>
-                    <button class="btn btn-sm btn-info print-btn" data-print-level="Contract" data-print-id="category-row-{{ category.cat_id }}">Print</button>
-                    <div id="loading-{{ category.cat_id }}" style="display:none;" class="loading">Loading...</div>
+                    {% for category in contract.categories %}
+                    {{ category.category }} ({{ category.items_on_contract }} on contract, {{ category.total_items_inventory }} in inventory)<br>
+                    {% endfor %}
+                </td>
+                <td>{{ contract.scan_date }}</td>
+                <td>
+                    <button class="btn btn-sm btn-secondary expand-btn" data-category="{{ contract.contract_number | urlencode | replace('\'', '\\\'') | replace('"', '\\"') }}" data-target="common-{{ contract.contract_number }}">Expand</button>
+                    <button class="btn btn-sm btn-secondary collapse-btn" style="display:none;" onclick="collapseSection('common-{{ contract.contract_number }}')">Collapse</button>
+                    <button class="btn btn-sm btn-info print-btn" data-print-level="Contract" data-print-id="category-row-{{ contract.contract_number }}">Print</button>
+                    <div id="loading-{{ contract.contract_number }}" style="display:none;" class="loading">Loading...</div>
                 </td>
             </tr>
             <tr>
                 <td colspan="5">
-                    <div id="common-{{ category.cat_id }}" class="expandable collapsed"></div>
+                    <div id="common-{{ contract.contract_number }}" class="expandable collapsed"></div>
                 </td>
             </tr>
             {% endfor %}
