--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,23 @@ body {
     border-collapse: collapse;
 }
 
+/* Styling for categories column in Tab 2 */
+.category-cell {
+    padding: 0.5rem;
+    vertical-align: top;
+}
+
+.category-item {
+    margin-bottom: 0.5rem;
+    white-space: normal;
+    word-wrap: break-word;
+    line-height: 1.5;
+}
+
+.category-item:last-child {
+    margin-bottom: 0;
+}
+
 /* Hierarchy level styling */
 .subcat-level {
     margin-left: 1.5rem;
@@ -172,5 +189,14 @@ table.table th.hidden, table.table td.hidden {
     .common-level th:nth-child(1),
     .common-level td:nth-child(1) {
         max-width: 150px; /* Adjust for smaller screens */
+    }
+
+    .category-cell {
+        padding: 0.3rem;
+    }
+
+    .category-item {
+        margin-bottom: 0.3rem;
+        font-size: 0.85rem;
     }
 }
